# SpecDiag

./: CITATION.cff  LICENSE  README.md  SpecDiag.py  __init__.py  setup.cfg  setup.py  spectral_diagram.py
SpecDiag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example1.py  model_application.ipynb
