[metadata]
name = SpecDiag
version = 0.0.1
author = Mabel Calim Costa
author_email = mabelcalim@gmail.com
description = A new tool for the comparison of time series in the frequency domain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mabelcalim/SpecDiag
project_urls =
    Bug Tracker = https://github.com/mabelcalim/SpecDiag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
